2005-05-14  Nate Nielsen  <nielsen@memberwebs.com>

    * seahorse-preferences.c: HIGify 'Visible Columns' tab.
    Patch from Jim Pharis (bug #304212)

2005-05-08  Nate Nielsen  <nielsen@memberwebs.com>

    * src/main.c: Display command line help.
    Patch by Adam Schreiber (bug #303463)
	* agent-seahore-agent.c: Use popt for command line handling.
	Patch by Adam Schreiber (bug #303495)
	
2005-05-07  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS: New release
    * configure.in: New version 0.7.9
    * Branched seahorse-0-8

2005-05-04  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-cache.c: Handle empty passwords properly
    Patch by Adam Schreiber (bug #169145)
    
2005-05-01  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-op.c:
    * libseahorse/seahorse-util.c:
    * libseahorse/seahorse-util.h: Add option to seahorse_util_write_data_*
    to supress release of data.
	* libseahorse/seahorse-vfs-data.c: Fix problem with closing files
	hanging under certain circumstances.
    * libseahorse/seahorse-hkp-source.c: Fix crasher problems when parsing a 
    HKP key index. 
    * libseahorse/seahorse-util.h: 
    * src/seahorse-key-manager-store.c:
    * src/seahorse-key-manager.c: Drag and drop now works from remote key 
    windows to the local key manager. (bug #111137)
    * libseahorse/seahorse-util.c: Fix memory leak. 
    
2005-04-26  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-actions.c:
    * agent/seahorse-agent-cache.c:
    * agent/seahorse-agent-prompt.c:
    * agent/seahorse-agent.h: Add option in agent 'Authorize' window
    to turn of authorize prompting. 
    Patch by Adam Schreiber. Fixes bug #302112
    
2005-04-24  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-prompt.c: Keep agent window on top. 
    Patch by Adam Schreiber. Fixes bug #301842
    * libseahorse/Makefile.am: 
    * libseahorse/seahorse-hkp-source.c: